apps/cloudflare/kustomization/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare
  labels:
    security.yiannis.io/require-harbor: "true"
