apps/cloudflare/kustomization/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-metrics
  labels:
    app.kubernetes.io/name: cloudflared
    app.kubernetes.io/component: metrics
spec:
  selector:
    app.kubernetes.io/name: cloudflared
  ports:
    - name: metrics
      port: 2000
      targetPort: metrics
      protocol: TCP
