apps/cloudflare/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  ingress:
  - fromEntities:
    - host
    toPorts:
    - ports:
      - port: "2000"
        protocol: TCP
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      - port: "2000"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "7844"
        protocol: UDP
  # Public tunnel applications should only reach the Traefik public
  # entrypoints, not private app services or the private Traefik entrypoints.
  # We express this against the Traefik pod endpoints directly because that is
  # the datapath Cilium is enforcing for these flows.
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
        app.kubernetes.io/instance: traefik-traefik
        app.kubernetes.io/name: traefik
    toPorts:
    - ports:
      - port: "8001"
        protocol: TCP
      - port: "8444"
        protocol: TCP
